so it turns out terrain gen is pretty hard

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bevy = "0.14.2"
+bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
+cdshealpix = "0.7.0"
+itertools = "0.13.0"
+rand = "0.8.5"
+redb = "2.1.4"
