--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ itertools = "0.13.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 redb = "2.1.4"
+tinyset = { version = "0.5.0", git = "https://github.com/matt-cornell/tinyset" }
