--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,9 @@ bevy = "0.14.2"
 bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
 cdshealpix = "0.7.0"
 itertools = "0.13.0"
-ordered-float = "4.4.0"
+ordered-float = "4.5.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
-redb = "2.1.4"
-tinyset = { version = "0.5.0", git = "https://github.com/matt-cornell/tinyset" }
+redb = "2.2.0"
+tinyset = "0.5.1"
+
