--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ rand_distr = "0.4.3"
 redb = "2.2.0"
 tinyset = "0.5.1"
 
+[dev-dependencies]
+bevy_egui = { version = "0.30.0", default-features = false, features = ["render", "default_fonts"]}
