--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,4 @@ tinyset = "0.5.1"
 toml = "0.8.19"
 
 [dev-dependencies]
-bevy_egui = { version = "0.30.0", default-features = false, features = ["render", "default_fonts"] }
+bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
