--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,4 @@ toml = "0.8.19"
 
 [dev-dependencies]
 bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
+rfd = "0.15.0"
