--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,3 +19,6 @@ toml = "0.8.19"
 [dev-dependencies]
 bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
 rfd = "0.15.0"
+
+[target.'wasm32-unknown-unknown'.dependencies]
+web-time = "1.1.0"
