--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base64 = "0.22.1"
 bevy = "0.14.2"
 bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
 cdshealpix = "0.7.0"
@@ -20,5 +21,13 @@ toml = "0.8.19"
 bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
 rfd = "0.15.0"
 
-[target.'wasm32-unknown-unknown'.dependencies]
+[target.'cfg(target_family = "wasm")'.dependencies]
+wasm-bindgen = "0.2.95"
+web-sys = { version = "0.3.72", features = ["console", "Document", "Storage", "Window"] }
 web-time = "1.1.0"
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+etcetera = "0.8.0"
+
+[target.'cfg(unix)'.dependencies]
+libc = "0.2.162"
