--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ itertools = "0.13.0"
 ordered-float = "4.5.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
-redb = "2.2.0"
+redb = { version = "2.2.0", features = ["logging"] }
 serde = { version = "1.0.214", features = ["derive"] }
 tinyset = "0.5.1"
 toml = "0.8.19"
