--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,6 +6,7 @@ on:
 
 env:
   examples: terrain
+  CARGO_TERM_COLOR: always
 
 jobs:
   build:
@@ -15,7 +16,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Rust
         run: |
-          rustup target install wasm32-unknown-unknown
+          rustup target add wasm32-unknown-unknown
           rustup override set nightly
       - name: Install wasm-bindgen
         run: cargo install wasm-bindgen-cli
