--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,16 @@ base64 = "0.22.1"
 bevy = "0.14.2"
 bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
 cdshealpix = "0.7.0"
+hex = { version = "0.4.3", features = ["serde"] }
 itertools = "0.13.0"
+once_map = { version = "0.4.21", features = ["serde"] }
 ordered-float = "4.5.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
+rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 serde = { version = "1.0.214", features = ["derive"] }
+thiserror = "2.0.3"
 tinyset = "0.5.1"
 toml = "0.8.19"
 
