--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "2.0.3"
+thread_local = { version = "1.1.8", features = ["nightly"] }
 tinyset = "0.5.1"
 toml = "0.8.19"
 
