--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 base64 = "0.22.1"
 bevy = "0.14.2"
+bitflags = { version = "2.6.0", features = ["bytemuck"] }
 bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
 cdshealpix = "0.7.0"
 hex = { version = "0.4.3", features = ["serde"] }
