--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,28 +4,19 @@ version.workspace = true
 edition.workspace = true
 
 [workspace]
-members = ["common", "client", "server"]
+members = ["client", "common", "server"]
 
 [workspace.package]
 edition = "2021"
 version = "0.1.0"
 
 [dependencies]
+bevy.workspace = true
+bevy_egui.workspace = true
 factor-common.workspace = true
 factor-client.path = "client/"
 factor-server.path = "server/"
-
-[workspace.dependencies]
-factor-common.path = "common/"
-
-bevy = "0.14.2"
-bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
-cdshealpix = "0.7.0"
-hex = { version = "0.4.3", features = ["serde"] }
-itertools = "0.13.0"
-serde = { version = "1.0.214", features = ["derive"] }
-thiserror = "2.0.3"
-thread_local = { version = "1.1.8", features = ["nightly"] }
+hex.workspace = true
 
 [profile.dev.package.'*']
 opt-level = 3
@@ -36,3 +27,22 @@ opt-level = 3
 codegen-units = 1
 incremental = false
 debug = false
+
+[lints]
+workspace = true
+
+[workspace.dependencies]
+factor-common.path = "common/"
+
+bevy = "0.14.2"
+bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
+bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
+cdshealpix = "0.7.0"
+hex = { version = "0.4.3", features = ["serde"] }
+itertools = "0.13.0"
+serde = { version = "1.0.214", features = ["derive"] }
+thiserror = "2.0.3"
+thread_local = { version = "1.1.8", features = ["nightly"] }
+
+[workspace.lints.clippy]
+too-many-arguments = "deny"
