--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -5,4 +5,7 @@ edition.workspace = true
 
 [dependencies]
 bevy.workspace = true
-bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
+bevy_egui.workspace = true
+
+[lints]
+workspace = true
