--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,21 +6,21 @@ edition.workspace = true
 [dependencies]
 bevy.workspace = true
 factor-common.workspace = true
+bytemuck.workspace = true
+cdshealpix.workspace = true
+hex.workspace = true
+serde.workspace = true
+thiserror.workspace = true
+thread_local.workspace = true
 
 base64 = "0.22.1"
 bitflags = { version = "2.6.0", features = ["bytemuck"] }
-bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
-cdshealpix = "0.7.0"
-hex = { version = "0.4.3", features = ["serde"] }
 once_map = { version = "0.4.21", features = ["serde"] }
 ordered-float = "4.5.0"
 rand = "0.8.5"
 rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
-serde = { version = "1.0.214", features = ["derive"] }
-thiserror = "2.0.3"
-thread_local = { version = "1.1.8", features = ["nightly"] }
 tinyset = "0.5.1"
 toml = "0.8.19"
 
@@ -31,7 +31,7 @@ itertools = "0.13.0"
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.95"
-web-sys = { version = "0.3.72", features = ["console", "Document", "Storage", "Window"] }
+web-sys = { version = "0.3.72", features = ["Document", "Storage", "Window", "console"] }
 
 [target.'cfg(target_family = "wasm")'.dev-dependencies]
 web-time = "1.1.0"
@@ -41,3 +41,6 @@ etcetera = "0.8.0"
 
 [target.'cfg(unix)'.dependencies]
 libc = "0.2.162"
+
+[lints]
+workspace = true
