Update the workflow to include builds for the server and client

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,6 +22,8 @@ jobs:
         run: cargo install wasm-bindgen-cli
       - name: Build server examples
         run: cargo build --target wasm32-unknown-unknown --release -p factor-server $(echo $server-examples | sed 's/[^ ]* */--example &/g')
+      - name: Build web demos
+        run: cargo build --target wasm32-unknown-unknown --release -p factor -p factor-server
       - name: Create bindings
         run: |
           mkdir -p static-deployment/examples/
@@ -29,6 +31,12 @@ jobs:
             wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment/examples target/wasm32-unknown-unknown/release/examples/$name.wasm
             cp static-deployment/_base_example.html static-deployment/examples/$name.html
           done
+          mv target/wasm32-unknown-unknown/release/factor.wasm web-demo.wasm
+          mv target/wasm32-unknown-unknown/release/factor-client.wasm client.wasm
+          wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment web-demo.wasm
+          wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment client.wasm
+          cp static-deployment/_base_example.html static-deployment/full-web.html
+          cp static-deployment/_base_example.html static-deployment/client.html
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
         with:
