--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,15 +34,22 @@ workspace = true
 [workspace.dependencies]
 factor-common.path = "common/"
 
+async-net = "2.0.0"
+async-tungstenite = { version = "0.28.0", features = ["async-tls"] }
+async-trait = "0.1.83"
 bevy = "0.14.2"
 bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
 bytemuck = { version = "1.19.0", features = ["derive", "extern_crate_std"] }
 cdshealpix = "0.7.0"
+futures-util = "0.3.31"
+futures-sink = "0.3.31"
 hex = { version = "0.4.3", features = ["serde"] }
 itertools = "0.13.0"
+postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "2.0.3"
 thread_local = { version = "1.1.8", features = ["nightly"] }
+ws_stream_wasm = "0.7.4"
 
 [workspace.lints.clippy]
 too-many-arguments = "deny"
