--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,8 +4,19 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+async-trait.workspace = true
 bevy.workspace = true
 bevy_egui.workspace = true
+factor-common.workspace = true
+futures-util.workspace = true
+futures-sink.workspace = true
+
+[target.'cfg(target_family = "wasm")'.dependencies]
+ws_stream_wasm.workspace = true
+
+[target.'cfg(not(target_family = "wasm"))'.dependencies]
+async-net.workspace = true
+async-tungstenite.workspace = true
 
 [lints]
 workspace = true
