--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -4,7 +4,11 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+async-trait.workspace = true
+bevy.workspace = true
 cdshealpix.workspace = true
+postcard.workspace = true
+serde.workspace = true
 
 [lints]
 workspace = true
