--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ postcard = { version = "1.0.10", default-features = false, features = ["use-std"
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "2.0.3"
 thread_local = { version = "1.1.8", features = ["nightly"] }
+triomphe = "0.1.14"
 ws_stream_wasm = "0.7.4"
 
 [workspace.lints.clippy]
