--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,11 +45,14 @@ futures-util = "0.3.31"
 futures-sink = "0.3.31"
 hex = { version = "0.4.3", features = ["serde"] }
 itertools = "0.13.0"
+once_map = "0.4.21"
 postcard = { version = "1.0.10", default-features = false, features = ["use-std"] }
+quick_cache = "0.6.9"
 serde = { version = "1.0.214", features = ["derive"] }
 thiserror = "2.0.3"
 thread_local = { version = "1.1.8", features = ["nightly"] }
 triomphe = "0.1.14"
+tinyset = "0.5.1"
 ws_stream_wasm = "0.7.4"
 
 [workspace.lints.clippy]
