--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,6 +12,7 @@ hex.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 thread_local.workspace = true
+tinyset.workspace = true
 
 base64 = "0.22.1"
 bitflags = { version = "2.6.0", features = ["bytemuck"] }
@@ -21,7 +22,6 @@ rand = "0.8.5"
 rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
-tinyset = "0.5.1"
 toml = "0.8.19"
 
 [dev-dependencies]
