--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -10,6 +10,7 @@ bevy_egui.workspace = true
 factor-common.workspace = true
 futures-sink.workspace = true
 futures-util.workspace = true
+itertools.workspace = true
 quick_cache.workspace = true
 tinyset.workspace = true
 triomphe.workspace = true
