--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,6 +9,7 @@ factor-common.workspace = true
 bytemuck.workspace = true
 cdshealpix.workspace = true
 hex.workspace = true
+rand.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 thread_local.workspace = true
@@ -18,7 +19,6 @@ base64 = "0.22.1"
 bitflags = { version = "2.6.0", features = ["bytemuck"] }
 once_map = { version = "0.4.21", features = ["serde"] }
 ordered-float = "4.5.0"
-rand = "0.8.5"
 rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
