--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -7,8 +7,10 @@ edition.workspace = true
 async-trait.workspace = true
 bevy.workspace = true
 cdshealpix.workspace = true
+copyvec = "0.2.1"
 futures-sink.workspace = true
 postcard.workspace = true
+quick_cache.workspace = true
 serde.workspace = true
 triomphe.workspace = true
 
