--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
     branches: ["main"]
 
 env:
+  client-examples: surface
   server-examples: terrain
   CARGO_TERM_COLOR: always
 
@@ -22,12 +23,14 @@ jobs:
         run: cargo install wasm-bindgen-cli
       - name: Build server examples
         run: cargo build --target wasm32-unknown-unknown --release -p factor-server $(echo $server-examples | sed 's/[^ ]* */--example &/g')
+      - name: Build client examples
+        run: cargo build --target wasm32-unknown-unknown --release -p factor-client $(echo $server-examples | sed 's/[^ ]* */--example &/g')
       - name: Build web demos
-        run: cargo build --target wasm32-unknown-unknown --release -p factor -p factor-server
+        run: cargo build --target wasm32-unknown-unknown --release -p factor -p factor-client
       - name: Create bindings
         run: |
           mkdir -p static-deployment/examples/
-          for name in $server-examples; do
+          for name in $client-examples $server-examples; do
             wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment/examples target/wasm32-unknown-unknown/release/examples/$name.wasm
             cp static-deployment/_base_example.html static-deployment/examples/$name.html
           done
@@ -35,7 +38,7 @@ jobs:
           mv target/wasm32-unknown-unknown/release/factor-client.wasm client.wasm
           wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment web-demo.wasm
           wasm-bindgen --no-typescript --target no-modules --out-dir static-deployment client.wasm
-          cp static-deployment/_base_example.html static-deployment/full-web.html
+          cp static-deployment/_base_example.html static-deployment/web-demo.html
           cp static-deployment/_base_example.html static-deployment/client.html
       - name: Upload pages artifact
         uses: actions/upload-pages-artifact@v3
