--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,21 +4,28 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+async-trait.workspace = true
 bevy.workspace = true
 factor-common.workspace = true
 bytemuck.workspace = true
 cdshealpix.workspace = true
+futures-util.workspace = true
 hex.workspace = true
 rand.workspace = true
+postcard.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 thread_local.workspace = true
 tinyset.workspace = true
+triomphe.workspace = true
+unsize.workspace = true
 
 base64 = "0.22.1"
 bitflags = { version = "2.6.0", features = ["bytemuck"] }
+crossbeam-channel = "0.5.13"
 once_map = { version = "0.4.21", features = ["serde"] }
 ordered-float = "4.5.0"
+papaya = "0.1.6"
 rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
