--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,6 +6,7 @@ edition.workspace = true
 [dependencies]
 async-trait.workspace = true
 bevy.workspace = true
+boxcar = "0.2.7"
 cdshealpix.workspace = true
 copyvec = "0.2.1"
 futures-sink.workspace = true
