--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,19 +4,20 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-async-trait.workspace = true
 bevy.workspace = true
 factor-common.workspace = true
 bytemuck.workspace = true
 cdshealpix.workspace = true
 futures-util.workspace = true
 hex.workspace = true
-rand.workspace = true
+itertools.workspace = true
 postcard.workspace = true
+rand.workspace = true
 serde.workspace = true
 thiserror.workspace = true
 thread_local.workspace = true
 tinyset.workspace = true
+toml.workspace = true
 triomphe.workspace = true
 unsize.workspace = true
 
@@ -29,7 +30,6 @@ papaya = "0.1.6"
 rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
-toml = "0.8.19"
 
 [dev-dependencies]
 bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
