Remove the test part of the workflow and let Clippy handle everything in like 15% of the time

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,13 +13,13 @@ jobs:
   native:
     runs-on: ubuntu-latest
     steps:
-      - name: Install system libraries
-        run: sudo apt install -y libasound2-dev libudev-dev libwayland-dev
+      # - name: Install system libraries
+      #   run: sudo apt install -y libasound2-dev libudev-dev libwayland-dev
       - uses: actions/checkout@v4
-      - name: Build
+      # - name: Run tests
+      #   run: cargo test
+      - name: Check with clippy
         run: cargo clippy
-      - name: Run tests
-        run: cargo test
   wasm:
     runs-on: ubuntu-latest
     steps:
@@ -27,5 +27,5 @@ jobs:
         uses: actions/checkout@v4
       - name: Install WASM target
         run: rustup target add wasm32-unknown-unknown
-      - name: Build
+      - name: Check with clippy
         run: cargo clippy --target wasm32-unknown-unknown
