--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,9 +31,9 @@ rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 
 [dev-dependencies]
-bevy_egui = { version = "0.30.0", default-features = false, features = ["default_fonts", "render"] }
+bevy_egui.workspace = true
 rfd = "0.15.0"
-itertools = "0.13.0"
+itertools.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
 wasm-bindgen = "0.2.95"
