--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,7 +4,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-bevy.workspace = true
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "x11"] }
 bevy_egui.workspace = true
 factor-common.workspace = true
 futures-sink.workspace = true
@@ -20,6 +20,7 @@ triomphe.workspace = true
 unsize.workspace = true
 
 [dev-dependencies]
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "x11"] }
 rand.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
