--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -20,7 +20,7 @@ triomphe.workspace = true
 unsize.workspace = true
 
 [dev-dependencies]
-bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "x11"] }
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "default_font", "tonemapping_luts", "webgl2", "x11"] }
 rand.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
