--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,7 +31,7 @@ rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 
 [dev-dependencies]
-bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "x11"] }
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
 bevy_egui.workspace = true
 rfd = "0.15.0"
 itertools.workspace = true
