--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -4,13 +4,14 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
-bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "x11"] }
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "default_font", "tonemapping_luts", "webgl2", "x11"] }
 bevy_egui.workspace = true
 factor-common.workspace = true
 futures-sink.workspace = true
 futures-util.workspace = true
 hex.workspace = true
 itertools.workspace = true
+leafwing-input-manager = "0.16.0"
 quick_cache.workspace = true
 serde.workspace = true
 thiserror.workspace = true
@@ -20,7 +21,6 @@ triomphe.workspace = true
 unsize.workspace = true
 
 [dev-dependencies]
-bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_text", "bevy_window", "bevy_winit", "default_font", "tonemapping_luts", "webgl2", "x11"] }
 rand.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
