Move mesh generation server-side and add a better `MeshData` type to store the relevant data

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -61,3 +61,4 @@ unsize = "1.1.0"
 [workspace.lints.clippy]
 type-complexity = "allow"
 too-many-arguments = "deny"
+unnecessary-literal-unwrap = "allow"
