Begin introduction of a rough terrain example
Signed-off-by: Matthew Cornell <mcornell400708@gmail.com>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: ["main"]
 
 env:
-  client_examples: surface
+  client_examples: surface rough
   server_examples: terrain
   CARGO_TERM_COLOR: always
 
