--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -26,6 +26,8 @@ rand_distr = "0.4.3"
 rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 wasm-timer = "0.2.5"
+rayon = "1.10.0"
+either = "1.13.0"
 
 [dev-dependencies]
 bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
