Set a specific Ubuntu version for the native CI runner

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   native:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
       - name: Install system libraries
         run: sudo apt install -y libasound2-dev libudev-dev libwayland-dev
