--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -32,7 +32,7 @@ wasm-timer = "0.2.5"
 rayon = "1.10.0"
 
 [dev-dependencies]
-bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
+bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_sprite", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
 bevy_egui.workspace = true
 rfd = "0.15.0"
 itertools.workspace = true
