--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -38,11 +38,9 @@ rfd = "0.15.0"
 itertools.workspace = true
 
 [target.'cfg(target_family = "wasm")'.dependencies]
+getrandom = { version = "0.3.1", features = ["wasm_js"] }
 wasm-bindgen = "0.2.95"
 web-sys = { version = "0.3.72", features = ["Document", "Storage", "Window", "console"] }
-
-[target.'cfg(target_family = "wasm")'.dev-dependencies]
-web-time = "1.1.0"
 
 [target.'cfg(not(target_family = "wasm"))'.dependencies]
 etcetera = "0.8.0"
