Rework the average temperature simulation

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -30,6 +30,7 @@ rand_xoshiro = "0.6.0"
 redb = { version = "2.2.0", features = ["logging"] }
 wasm-timer = "0.2.5"
 rayon = "1.10.0"
+roots = "0.0.8"
 
 [dev-dependencies]
 bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
