--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -31,6 +31,7 @@ redb = { version = "2.2.0", features = ["logging"] }
 wasm-timer = "0.2.5"
 rayon = "1.10.0"
 roots = "0.0.8"
+atomic_float = "1.1.0"
 
 [dev-dependencies]
 bevy = { workspace = true, features = ["bevy_gizmos", "bevy_pbr", "bevy_render", "bevy_window", "bevy_winit", "tonemapping_luts", "webgl2", "x11"] }
