Use the new healpix library

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,7 +7,7 @@ edition.workspace = true
 bevy.workspace = true
 factor-common.workspace = true
 bytemuck.workspace = true
-cdshealpix.workspace = true
+healpix.workspace = true
 hex.workspace = true
 itertools.workspace = true
 ordered-float.workspace = true
