--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,9 +47,9 @@ async-tungstenite = { version = "0.28.1", features = ["async-tls"] }
 bevy = { version = "0.15.0", default-features = false, features = ["bevy_color", "bevy_state", "multi_threaded", "trace"] }
 bevy_egui = { version = "0.31.1", default-features = false, features = ["default_fonts", "render"] }
 bytemuck = { version = "1.20.0", features = ["derive", "extern_crate_std"] }
-cdshealpix = "0.7.3"
 futures-util = "0.3.31"
 futures-sink = "0.3.31"
+healpix = "0.3.0"
 hex = { version = "0.4.3", features = ["serde"] }
 itertools = "0.13.0"
 ordered-float = "4.6.0"
