--- a/client/Cargo.toml
+++ b/client/Cargo.toml
@@ -9,6 +9,7 @@ bevy_egui.workspace = true
 factor-common.workspace = true
 futures-sink.workspace = true
 futures-util.workspace = true
+healpix.workspace = true
 leafwing-input-manager = "0.16.0"
 ordered-float.workspace = true
 serde.workspace = true
