--- a/common/Cargo.toml
+++ b/common/Cargo.toml
@@ -6,9 +6,9 @@ edition.workspace = true
 [dependencies]
 bevy.workspace = true
 bytemuck.workspace = true
-cdshealpix.workspace = true
 copyvec = "0.2.1"
 futures-sink.workspace = true
+healpix.workspace = true
 hex.workspace = true
 hmac-sha256 = "1.1.7"
 postcard.workspace = true
