Fix a bunch of clippy lints

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -67,3 +67,4 @@ unsize = "1.1.0"
 type-complexity = "allow"
 too-many-arguments = "deny"
 unnecessary-literal-unwrap = "allow"
+result-large-err = "allow"
