--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -24,6 +24,8 @@ jobs:
         run: cargo clippy
   wasm:
     runs-on: ubuntu-latest
+    env:
+      RUSTFLAGS: --cfg getrandom_backend="wasm_js"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
